; ModuleID = '/home/carl/AnghaBench/tmux/extr_input.c_input_parse.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_input.c_input_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_pane = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.evbuffer* }
%struct.evbuffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @input_parse(%struct.window_pane* %0) #0 {
  %2 = alloca %struct.window_pane*, align 8
  %3 = alloca %struct.evbuffer*, align 8
  store %struct.window_pane* %0, %struct.window_pane** %2, align 8
  %4 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %5 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.evbuffer*, %struct.evbuffer** %7, align 8
  store %struct.evbuffer* %8, %struct.evbuffer** %3, align 8
  %9 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %10 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %11 = call i32 @EVBUFFER_DATA(%struct.evbuffer* %10)
  %12 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %13 = call i32 @EVBUFFER_LENGTH(%struct.evbuffer* %12)
  %14 = call i32 @input_parse_buffer(%struct.window_pane* %9, i32 %11, i32 %13)
  %15 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %16 = load %struct.evbuffer*, %struct.evbuffer** %3, align 8
  %17 = call i32 @EVBUFFER_LENGTH(%struct.evbuffer* %16)
  %18 = call i32 @evbuffer_drain(%struct.evbuffer* %15, i32 %17)
  ret void
}

declare dso_local i32 @input_parse_buffer(%struct.window_pane*, i32, i32) #1

declare dso_local i32 @EVBUFFER_DATA(%struct.evbuffer*) #1

declare dso_local i32 @EVBUFFER_LENGTH(%struct.evbuffer*) #1

declare dso_local i32 @evbuffer_drain(%struct.evbuffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
